--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -59,3 +59,13 @@ path {
     padding: auto 0;
     position: absolute;
 }
+
+#theme-button:hover {
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 1000px) {
+    .navbar {
+        display: none;
+    }
+}
