--- a/styles/education.css
+++ b/styles/education.css
@@ -78,3 +78,13 @@ h4 {
     font-weight: 400;
     color: var(--text-dark);
 }
+
+
+@media only screen and (max-width: 1000px) {
+    .timeline::after {
+        margin-left: 20px;
+    }
+    .edu-elements::before {
+        margin-left: -28px;
+    }
+}
