--- a/styles/about.css
+++ b/styles/about.css
@@ -93,6 +93,7 @@
     font-weight: 600;
     padding: auto;
     padding: 5px 20px;
+    justify-content: center;    
     text-decoration: none;
     transition: background-color 0.5s ease-out;
 }
@@ -112,6 +113,8 @@
     border-radius: 10px;
     font-size: 1rem;
     font-weight: 600;
+    text-align: center;
+    justify-content: center;    
     padding: 7px 20px;
     text-decoration: none;
     transition: background-color 0.5s ease-out;
@@ -144,8 +147,11 @@
     }
     .downloadresume {
         margin: auto;
+        width: 12em;
+        text-align: center;
     }
     .contact-button {
-        margin: auto;
+        width: 12em;
+        margin: auto;   
     }
 }
